--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <div class="container">
         <h1>Калькулятор прогресса</h1>
-        <h1>Боевой пропуск 16 сезон</h1>
+        <h1>Боевой пропуск 17 сезон</h1>
         <div class="info-block">
-            <p>с 5 марта по 3 июня.</p>
+            <p>с 4 июня до 2 сентября.</p>
             <p>укажите главу, какую по счету уже выполняете и этап, количество полученных очков в этапе и нажмите рассчитать.</p>
         </div>
         
